fixed toast z-index

--- a/custom.css
+++ b/custom.css
@@ -137,3 +137,7 @@ img {
 .z-6 {
     z-index: 6 !important;
 }
+
+.z-7 {
+    z-index: 7 !important;
+}
